--- a/custom.css
+++ b/custom.css
@@ -7,7 +7,8 @@ body {
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 label {
@@ -79,6 +80,11 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .row {
   margin-top: 10px;
+}
+
+.rowcategory{
+  margin-top: 5px;
+  margin-left: 5px;
 }
 
 .panel-heading {
